# DoorDetection

./: .gitignore  README.md  acces_token.txt  command.txt  command_used_in_dev.txt  safe.tar.xz
cpp_reader/: CMakeLists.txt  main.cpp
example/: huh.py  mpii.py  mscoco.py  read_curves.py  spsDoor.py  spsDoor2.py
pose/datasets/: __init__.py  mscoco.py  spsdoor.py
pose/models/: grosse_deception_model  hourglass.py  hourglass2.py  hourglass_decption_de_ma_vie.py
pose/utils/: evaluation.py  imutils.py  misc.py  transforms.py
script/: hourglass_1  hourglass_3  training_512
torchscript/: export.py
