cmake_minimum_required(VERSION 3.1)
project(main)
set(CMAKE_PREFIX_PATH /home/victor/Libraries/libtorch)
find_package(Torch REQUIRED)
find_package( OpenCV REQUIRED )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
add_executable(main main.cpp)
target_link_libraries(main "${TORCH_LIBRARIES}" "${OpenCV_LIBRARIES}")
set_property(TARGET main PROPERTY CXX_STANDARD 14)
